--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "apollo-server": "^2.24.0",
     "apollo-server-express": "^2.24.0",
     "dotenv": "^9.0.2",
-    "graphql": "^15.5.0"
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
+    "mongodb": "^3.6.7"
   },
   "scripts": {
     "start": "node dist/index.js",
@@ -24,12 +26,14 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
+    "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.3.0",
     "chai": "^4.3.4",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
     "sinon": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   }
