--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "target": "es2016",
+      "esModuleInterop": true,
       "outDir": "dist",
       "lib": [
         "es6",
