--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^15.3.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "codecov": "^3.8.2",
     "mocha": "^8.4.0",
     "nock": "^13.0.11",
     "nyc": "^15.1.0",
